<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OzStream</string>
    <string name="term_and_policy">Agree to our <u>Terms of use and privacy policy</u></string>
    <string name="log_in"><u> Log in</u></string>
    <string name="sign_up"> <u>Sign up</u></string>
    <string name="log_in_not_underline">Log in</string>
    <string name="sign_up_not_underline">Sign up</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="facebook_app_id">4729193837180336</string>
    <string name="facebook_client_token">891723e8926f224d7fb0d46ef55f605b</string>
    <string name="invalid_first_name">(*) Invalid first name.</string>
    <string name="invalid_last_name">(*) Invalid last name.</string>
    <string name="invalid_email">(*) Invalid email.</string>
    <string name="invalid_password">(*) Invalid password.</string>
    <string name="invalid_password_confirm">(*) Invalid password confirm.</string>
    <string name="invalid_password_not_the_same">(*) Password is not the same.</string>
    <string name="change_image_success">Change image successfully !</string>
    <string name="change_image_fail">Change image fail, try again laters !</string>
    <string name="login_success">Login successfully</string>
    <string name="please_login_to_enjoy">Please login or sign up to enjoy.</string>
    <string name="login_fail">Login fail.</string>
    <string name="please_see_read_tern_and_policy">Please see and agree with our tern and policy.</string>
    <string name="create_acc_fail">Create account fail.</string>
    <string name="please_log_in_to_enjoy">Successfully, please login to enjoy movies.</string>
    <string name="log_out_success">Log out successfully !</string>
    <string name="acc_auth_by_gg_no_change_pass">Your account is authorized by Google, so not change password</string>
    <string name="acc_auth_by_fb_not_change_pass">Your account is authorized by Facebook, so not change password</string>
    <string name="change_name_success">Change Name Successfully.</string>
    <string name="require_not_null">(*) Requires is not null.</string>
    <string name="pass_not_the_same">(*) Password is not the same.</string>
    <string name="invalid_new_pass">(*) Invalid new password.</string>
    <string name="current_pass_not_true">(*) Current password not true.</string>
    <string name="change_pass_fail_try_again">Change password fail, make sure the fields are valid.</string>
    <string name="change_pass_success">Change password successfully</string>
    <string name="change_pass_fail">Change password fail, make sure the fields are valid.</string>
    <string name="best_app_for_u">The best\n app for\n your entertainment</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="pass_length_require">(*) Password length should be more than six.</string>
    <string name="home">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="others">Others</string>
    <string name="search_movie">Search Movies</string>
    <string name="movies">Movies</string>
    <string name="casts">Casts</string>
    <string name="crews">Crews</string>
    <string name="information">Information</string>
    <string name="themes">Themes</string>
    <string name="languages">Languages</string>
    <string name="switch_account">Switch Account</string>
    <string name="log_out">Log out</string>
    <string name="choose_from_your_gallery">Choose from your gallery</string>
    <string name="take_a_photo_now">Take a photo now</string>
    <string name="change_name">Change Name</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">New password confirm</string>
    <string name="select_date">Date</string>
    <string name="select_date_oke">Select Date</string>
    <string name="do_you_sure_to_log_out">Do you sure to log out ?</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="overview">Overview</string>
    <string name="similar">Similar</string>
    <string name="recommendations">Recommendations</string>
    <string name="characters">Characters</string>
    <string name="details">Details</string>
    <string name="cast_details">Cast Details</string>
    <string name="crew_details">Crew Details</string>
    <string name="known_as">Known As</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="lang_vi">Vietnamese</string>
    <string name="united_states">United States</string>
    <string name="recently">Recently</string>
    <string name="key_word_search">Keyword</string>
    <string name="theme_light">Light Mode</string>
    <string name="theme_dark">Dark Mode</string>
    <string name="change_theme_info">Change theme fail, try later</string>
    <string name="authorized_by_khandev_company">Authorized by khandev.company</string>

    <string name="text_like">Like</string>
    <string name="text_love">Love</string>
    <string name="text_lovely">Lovely</string>
    <string name="text_smile">Smile</string>
    <string name="text_wow">Wow</string>
    <string name="text_sad">Sad</string>
    <string name="text_angry">Angry</string>

    <string name="language_vn">Vietnamese</string>
    <string name="language_us">United States</string>
    <string name="no_comment">There are no comments yet\nBe the first to comment</string>
    <string name="confirm_change_language">Restart your application to apply changes</string>


    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="action_adventure">Action &amp; Adventure</string>
    <string name="kids">Kids</string>
    <string name="news">News</string>
    <string name="reality">Reality</string>
    <string name="scifi_fanta">Sci-Fi &amp; Fantasy</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
    <string name="war_politics">War &amp; Politics</string>

    <string name="director">Director</string>
    <string name="minutes">minutes</string>
    <string name="text_less">Less</string>
    <string name="text_more">More</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_comments">Comments</string>
    <string name="text_shares">Shares</string>
    <string name="_0_comment">0 comment</string>
    <string name="comment">comment</string>
    <string name="latest">Latest</string>
    <string name="text_write_comment">Write comment</string>
    <string name="text_name">"Name : "</string>
    <string name="text_birthdate">"Birthdate : "</string>
    <string name="text_current_language_vi">Your current language is Vietnamese</string>
    <string name="text_current_language_us">Your current language is United States</string>
    <string name="add_to_favorite_success">Add to favorites successfully</string>
    <string name="delete_out_of_favorite_success">Remove out of favorites successfully</string>
    <string name="somthing_went_wrong">Something went wrong, try later !</string>
    <string name="empty_watch_recently_movies">Empty watch recently movies</string>
    <string name="empty_favorite_movies">Empty favorite movies</string>
    <string name="empty_favorite_movie">Empty favorite movies</string>
    <string name="empty_favorite_cast">Empty favorite casts</string>
    <string name="empty_favorite_crew">Empty favorite crews</string>
    <string name="empty_watch_recently_movie">Empty watch recently movies</string>
    <string name="empty_keyword_search">Empty keyword search recently</string>
    <string name="no_creator">No creator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_overview">No overview yet</string>
    <string name="no_results_matches">No results matches</string>
    <string name="next_version">It will be released in the next version</string>
    <string name="edit_comment">Edit comment</string>
    <string name="my_profile">My profile</string>
    <string name="email_has_been_taken">This email has been taken</string>
    <string name="create_acc_success">Create account successfully</string>
    <string name="send_issues">Send issues</string>
    <string name="show_detail_issues">Please show detailed issues for the developer</string>
    <string name="issues">Issues</string>
    <string name="send_dev_issues">Send dev issues</string>
    <string name="code_">Code</string>
    <string name="your_email_link_with_account">Your email link with account</string>
    <string name="send_code">Send code</string>
    <string name="submit_code">Submit code</string>
    <string name="code_sent_to_email">Code has been sent to your email</string>
    <string name="enter_email_link_account">Please enter the email link with your account</string>
    <string name="waiting_check_email">Please waiting check your email</string>
    <string name="email_not_reference_to_any_acc">This email does not refer to any account</string>
    <string name="enter_code_sent">Please enter the code sent to your email</string>

</resources>