<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nestedScrollViewChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corner_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="#FF9800"
                android:textSize="@dimen/_18sdp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailLinkedWithThisAccountLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/your_email_link_with_account"
                android:textColorHint="#FF9800"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#FF9800"
                app:boxStrokeErrorColor="#FF0000"
                app:errorTextColor="#FF0000"
                app:hintTextColor="#FF9800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmailLinkedWithThisAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:paddingStart="@dimen/_20sdp"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_13sdp" />

                <requestFocus />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCodeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/code_"
                android:textColorHint="#FF9800"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#FF9800"
                app:boxStrokeErrorColor="#FF0000"
                app:errorTextColor="#FF0000"
                app:hintTextColor="#FF9800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:paddingStart="@dimen/_20sdp"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_13sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNewPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/new_password"
                android:longClickable="false"
                android:textColorHint="#FF9800"
                android:visibility="gone"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#FF9800"
                app:boxStrokeErrorColor="#FF0000"
                app:errorTextColor="#FF0000"
                app:hintTextColor="#FF9800"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_13sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNewPasswordConfirmLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/new_password_confirm"
                android:longClickable="false"
                android:textColorHint="#FF9800"
                android:visibility="gone"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#FF9800"
                app:boxStrokeErrorColor="#FF0000"
                app:errorTextColor="#FF0000"
                app:hintTextColor="#FF9800"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNewPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_13sdp" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_20sdp">

                <TextView
                    android:id="@+id/buttonSendCode"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/background_corner_button_log_in"
                    android:gravity="center"
                    android:text="@string/send_code" />

            </RelativeLayout>

            <TextView
                android:id="@+id/buttonConfirmChanged"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/background_corner_button_log_in"
                android:gravity="center"
                android:text="@string/submit_code" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>

