<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="user"
            type="com.example.movies.model.users.UserProfile" />
    </data>

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corner_top"
        android:id="@+id/nestedScrollViewChangePassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_18sdp"
                android:text="@string/change_name"
                android:textColor="#FF9800"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FF9800"
                app:hintTextColor="#FF9800"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/first_name"
                app:boxBackgroundColor="@color/white"
                app:errorTextColor="#FF0000"
                app:boxStrokeErrorColor="#FF0000"
                app:boxStrokeColor="#FF9800"
                android:id="@+id/textInputCurrentFirstNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:id="@+id/textInputCurrentFirstName"
                    android:paddingStart="@dimen/_20sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@{user.firstName}"
                    android:textCursorDrawable="@drawable/cursor_drawable" />
                <requestFocus/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="#FF9800"
                android:hint="@string/last_name"
                android:id="@+id/textInputCurrentLastNameLayout"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="#FF9800"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#FF9800"
                app:errorTextColor="#FF0000"
                app:boxStrokeErrorColor="#FF0000">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/white"
                    android:id="@+id/textInputCurrentLastName"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@{user.lastName}"
                    android:textCursorDrawable="@drawable/cursor_drawable" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/confirm_changes"
                android:id="@+id/buttonConfirmNameChanged"
                android:background="@drawable/background_corner_button_log_in"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>

